# parallel-labs

./: README.md
lab1/report/: main.typ  template.typ
lab2/report/: main.typ
lab2/src/: CMakeLists.txt  main.cpp
lab3/report/: main.typ
lab3/src/: matrix.cpp  matrix.cu
lab4/report/: main.typ  template.typ
lab4/src/: CMakeLists.txt  cudafft.cu  main.cu  parallel_fft.cu  report1.nsys-rep  report1.sqlite  serial_fft.cpp  util.h
lab5/report/: main.typ  template.typ
lab5/src/: filter.cu
src/: main.cpp
